Fixed, image in popup maker not being 100% covering the whole div

--- a/wp-content/themes/astra-child/style.css
+++ b/wp-content/themes/astra-child/style.css
@@ -185,3 +185,11 @@
 .adoption-fee {
   border-bottom: 1px dotted #333; /* subtle dotted underline */
 }
+
+/* ===== pop up maker styling ===== */
+
+#popmake-161 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
